--- a/templates/systems/element_detail_tabs.html
+++ b/templates/systems/element_detail_tabs.html
@@ -87,7 +87,6 @@
 {% block contextbar %}{% endblock %}
 
 {% block body %}
-
 <div style="margin-top: 30px">
   <div class="container">
 
@@ -237,6 +236,13 @@
       <!-- Tab panel: combined -->
       {% if enable_experimental_oscal %}
       <div role="tabpanel" class="tab-pane" id="oscal">
+        <p id="oscal_download" class="navbar-text navbar-right">
+          <a class="navbar-link" 
+             href="/systems/{{ system.id }}/component/{{ element.id }}/download/oscal/json">
+            <span class="glyphicon glyphicon-download"></span>
+            Download ...
+          </a>
+        </p>
         <div id="combined_smt" class="control-text"><h3>OSCAL (under development)</h3></div>
         <div style="font-family: monospace; font-size:12px; white-space: pre;">{{ oscal }}</div>
       </div>
