Testing. I'd like to be able to reload on that same tab.

--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -549,6 +549,7 @@ Remove contextbar from top of page
               data: data,
               success: function(res) {
                 console.log(res);
+                window.location.reload()
               }
             });
           }
