Add selenium test to exercise JSON OSCAL component download.

--- a/templates/systems/element_detail_tabs.html
+++ b/templates/systems/element_detail_tabs.html
@@ -237,7 +237,8 @@
       {% if enable_experimental_oscal %}
       <div role="tabpanel" class="tab-pane" id="oscal">
         <p id="oscal_download" class="navbar-text navbar-right">
-          <a class="navbar-link" 
+          <a id="oscal_download_json_link"
+             class="navbar-link" 
              href="/systems/{{ system.id }}/component/{{ element.id }}/download/oscal/json">
             <span class="glyphicon glyphicon-download"></span>
             Download ...
