refactor/remove inline css

--- a/templates/app-store.html
+++ b/templates/app-store.html
@@ -116,7 +116,7 @@ Compliance Apps
 </style>
 {% endblock %}
 
-{% block contextbar %} 
+{% block contextbar %}
   {# kill breadcrumbs but add some space below site header #}
   <div id="contextbar">
     &nbsp;
@@ -125,8 +125,8 @@ Compliance Apps
 
 {% block body %}
       <div>
-        <a href="/" style="color: black;">
-          <span class="glyphicon glyphicon-home" style="margin-right: .25em"></span>
+        <a href="/" class="glyphicon-home-icon">
+          <span class="glyphicon glyphicon-home"></span>
         </a>
         / Compliance Apps
 
