Have task-finished.html only display JSON

--- a/templates/task-finished.html
+++ b/templates/task-finished.html
@@ -80,8 +80,8 @@
                     <tr>
                         <td>{{document.title}}</td>
                         <td>
-                          {% if document.format == "oscal_json" %}
-                            <a href="{{task.get_absolute_url}}/download/document/{{document.id | urlencode }}/oscal_json">OSCAL (json)</a>&nbsp;&nbsp;
+                          {% if document.format == "json" %}
+                            <a href="{{task.get_absolute_url}}/download/document/{{document.id | urlencode }}/plain">OSCAL (json)</a>&nbsp;&nbsp;
                           {% elif document.format == "oscal_xml" %}
                             <a href="{{task.get_absolute_url}}/download/document/{{document.id | urlencode }}/oscal_xml">OSCAL (xml)</a>&nbsp;&nbsp;
                           {% else %}
