--- a/templates/components/components_library.html
+++ b/templates/components/components_library.html
@@ -17,15 +17,12 @@
 
 {% block body %}
 
-<div style="margin-top: 30px">
-  <div class="container">
-
   <div class="row" style="">
     <div id="above-tab-content" class="row">
       <!-- Page Title-->
       <div style="float: left;">
           <h2 class="control-heading" style="">
-            <a href="{{ project.get_absolute_url }}" style="color: black;">{{ system.root_element.name }}</a> > Selected Components
+            <a href="{{ project.get_absolute_url }}" style="color: black;">Component Library
           </h2>
       </div>
       <!-- Control Lookup-->
@@ -40,12 +37,12 @@
     <p>&nbsp;</p>
 
     <div id="tab-content" class="row rows-header" style="">
-        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span style="font-size: 14pt; font-weight: bold;">Selected Components</div>
+        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span style="font-size: 14pt; font-weight: bold;">Available Components</div>
     </div>
-   {% for component in system.producer_elements %}
+   {% for component in elements %}
     <div id="tab-content" class="row row-control" style="">
         <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
-            <a href="/systems/{{ system.id }}/component/{{ component.id }}">{{ component.name }}</a>
+            <a href="/controls/component/{{ component.id }}">{{ component.name }}</a>
         </div>
         <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
             {{ component.description }}
@@ -54,21 +51,6 @@
     </div>
     {% endfor %}
 
-    <div id="tab-content" class="row row-control" style="">
-      <form class="form-inline" method="post" action="/systems/{{ system.id }}/components/add_system_component">
-        {% csrf_token %}
-        <div id="" class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
-        <div class="form-group">
-            <label for="compoment">Add component</label>&nbsp;&nbsp;
-              <select class="producer_element_id" id="producer_element_id" name="producer_element_id" style="width:340px;">
-                {% for component in elements %}
-                <option value="{{ component.id }}">{{ component.name }}</option>
-                {% endfor %}
-              </select>
-        </div>
-          &nbsp;&nbsp;<button type="submit" class="small btn btn-sm btn-success" style="color: white;" onclick="add_smt()">Add</button>
-      </div>
-    </div>
       </form>
   </div>
 
